--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -45,7 +45,8 @@
     "tslib": "^2.3.0",
     "tslint": "^6.1.3",
     "tslint-etc": "^1.13.10",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "node": "^17.7.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.2",
